# deep-learning-from-scratch

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  README_studio-lab.md  environment.yml  requirements.txt
.github/: FUNDING.yml
ch01/: 01_python.ipynb  Python入門.py  Python入門_03.py  Python入門_04.py  README.md  hungry.py  img_show.py  man.py  note.md  python_tutorial.ipynb  python入門_02.py  sin_cos_graph.py  sin_graph.py
ch02/: README.md  and_gate.py  nand_gate.py  nand_gate_pk.py  note.md  or_gate.py  or_gate_pk.py  xor_gate.py  xor_gate_pk.py
ch03/: .identify.py.swp  01.py  02.py  README.md  ch03_02.ipynb  identify.py  mnist_show.py  mnist_show_pk.py  network.py  neuralnet_mnist.py  neuralnet_mnist_batch.py  nueralnet_mnist.py  nueralnet_mnist_batch.py  relu.py  sample_weight.pkl  sig_step_compare.py  sigmoid.py  softmax.py  step_function.py
ch04/: README.md  cross_entropy_error.py  gradient_1d.py  gradient_2d.py  gradient_method.py  gradient_simplenet.py  mean_squared_error.py  train_neuralnet.py  train_nueralnet.py  two_layer_net.py
ch05/: README.md  buy_apple.py  buy_apple_orange.py  gradient_check.py  layer_naive.py  train_neuralnet.py  train_nueralnet.py  two_layer_net.py
ch06/: README.md  batch_norm_gradient_check.py  batch_norm_test.py  hyperparameter_optimization.py  optimizer_compare_mnist.py  optimizer_compare_naive.py  overfit_dropout.py  overfit_weight_decay.py  weight_init_activation_histogram.py  weight_init_compare.py
ch07/: README.md  apply_filter.py  gradient_check.py  params.pkl  simple_convnet.py  train_convnet.py  (+1 more)
(+78 files in other folders)
